[gd_scene load_steps=65 format=3 uid="uid://bwq8h8v7yxmqr"]

[ext_resource type="Script" uid="uid://qit3im8bm0xq" path="res://UI/WaveUI.gd" id="1_8k4qh"]
[ext_resource type="FontFile" uid="uid://dll06tmq2mx0h" path="res://main_screen/font/retro.ttf" id="2_5rt17"]
[ext_resource type="Texture2D" uid="uid://scyh32fgxwvq" path="res://UI/shop/coin.png" id="3_vma0k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_35otv"]
atlas = ExtResource("3_vma0k")
region = Rect2(0, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_74fni"]
atlas = ExtResource("3_vma0k")
region = Rect2(150, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_del4s"]
atlas = ExtResource("3_vma0k")
region = Rect2(300, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwl7d"]
atlas = ExtResource("3_vma0k")
region = Rect2(450, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3qkl"]
atlas = ExtResource("3_vma0k")
region = Rect2(600, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k6ie"]
atlas = ExtResource("3_vma0k")
region = Rect2(750, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_rktus"]
atlas = ExtResource("3_vma0k")
region = Rect2(900, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_4titf"]
atlas = ExtResource("3_vma0k")
region = Rect2(1050, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5m0k"]
atlas = ExtResource("3_vma0k")
region = Rect2(1200, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl3v4"]
atlas = ExtResource("3_vma0k")
region = Rect2(1350, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkek4"]
atlas = ExtResource("3_vma0k")
region = Rect2(1500, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m5wg"]
atlas = ExtResource("3_vma0k")
region = Rect2(1650, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_84wnh"]
atlas = ExtResource("3_vma0k")
region = Rect2(1800, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb5p3"]
atlas = ExtResource("3_vma0k")
region = Rect2(1950, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdan6"]
atlas = ExtResource("3_vma0k")
region = Rect2(2100, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lkkh"]
atlas = ExtResource("3_vma0k")
region = Rect2(2250, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5n7m"]
atlas = ExtResource("3_vma0k")
region = Rect2(2400, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw7gb"]
atlas = ExtResource("3_vma0k")
region = Rect2(2550, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_setg4"]
atlas = ExtResource("3_vma0k")
region = Rect2(2700, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_53txh"]
atlas = ExtResource("3_vma0k")
region = Rect2(2850, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_boy1k"]
atlas = ExtResource("3_vma0k")
region = Rect2(3000, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_otui5"]
atlas = ExtResource("3_vma0k")
region = Rect2(3150, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lbcj"]
atlas = ExtResource("3_vma0k")
region = Rect2(3300, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm7kg"]
atlas = ExtResource("3_vma0k")
region = Rect2(3450, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixyro"]
atlas = ExtResource("3_vma0k")
region = Rect2(3600, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pn67"]
atlas = ExtResource("3_vma0k")
region = Rect2(3750, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4y4s"]
atlas = ExtResource("3_vma0k")
region = Rect2(3900, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7fiv"]
atlas = ExtResource("3_vma0k")
region = Rect2(4050, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_efjkt"]
atlas = ExtResource("3_vma0k")
region = Rect2(4200, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3e28"]
atlas = ExtResource("3_vma0k")
region = Rect2(4350, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_87883"]
atlas = ExtResource("3_vma0k")
region = Rect2(4500, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_lh2g5"]
atlas = ExtResource("3_vma0k")
region = Rect2(4650, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgvnb"]
atlas = ExtResource("3_vma0k")
region = Rect2(4800, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_28ln3"]
atlas = ExtResource("3_vma0k")
region = Rect2(4950, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmow7"]
atlas = ExtResource("3_vma0k")
region = Rect2(5100, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5v8k"]
atlas = ExtResource("3_vma0k")
region = Rect2(5250, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_vabkk"]
atlas = ExtResource("3_vma0k")
region = Rect2(5400, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq4nu"]
atlas = ExtResource("3_vma0k")
region = Rect2(5550, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5scn"]
atlas = ExtResource("3_vma0k")
region = Rect2(5700, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwuej"]
atlas = ExtResource("3_vma0k")
region = Rect2(5850, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ab63"]
atlas = ExtResource("3_vma0k")
region = Rect2(6000, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph6b8"]
atlas = ExtResource("3_vma0k")
region = Rect2(6150, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pcdf"]
atlas = ExtResource("3_vma0k")
region = Rect2(6300, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba3n3"]
atlas = ExtResource("3_vma0k")
region = Rect2(6450, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_gblci"]
atlas = ExtResource("3_vma0k")
region = Rect2(6600, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4325"]
atlas = ExtResource("3_vma0k")
region = Rect2(6750, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_t805l"]
atlas = ExtResource("3_vma0k")
region = Rect2(6900, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fj8o"]
atlas = ExtResource("3_vma0k")
region = Rect2(7050, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qccb"]
atlas = ExtResource("3_vma0k")
region = Rect2(7200, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqjak"]
atlas = ExtResource("3_vma0k")
region = Rect2(7350, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_6724e"]
atlas = ExtResource("3_vma0k")
region = Rect2(7500, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_einsw"]
atlas = ExtResource("3_vma0k")
region = Rect2(7650, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_rts5j"]
atlas = ExtResource("3_vma0k")
region = Rect2(7800, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqf2i"]
atlas = ExtResource("3_vma0k")
region = Rect2(7950, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_my5xc"]
atlas = ExtResource("3_vma0k")
region = Rect2(8100, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_u14kk"]
atlas = ExtResource("3_vma0k")
region = Rect2(8250, 0, 150, 113)

[sub_resource type="AtlasTexture" id="AtlasTexture_imvkv"]
atlas = ExtResource("3_vma0k")
region = Rect2(8400, 0, 150, 113)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0d4d"]
animations = [{
"frames": [{
"duration": 0.07,
"texture": SubResource("AtlasTexture_35otv")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_74fni")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_del4s")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_mwl7d")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_l3qkl")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_2k6ie")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_rktus")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_4titf")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_j5m0k")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_vl3v4")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_rkek4")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_4m5wg")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_84wnh")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_sb5p3")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_pdan6")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_6lkkh")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_b5n7m")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_kw7gb")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_setg4")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_53txh")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_boy1k")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_otui5")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_7lbcj")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_wm7kg")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_ixyro")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_6pn67")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_j4y4s")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_g7fiv")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_efjkt")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_y3e28")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_87883")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_lh2g5")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_xgvnb")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_28ln3")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_tmow7")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_d5v8k")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_vabkk")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_yq4nu")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_o5scn")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_qwuej")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_0ab63")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_ph6b8")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_8pcdf")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_ba3n3")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_gblci")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_a4325")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_t805l")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_4fj8o")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_5qccb")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_eqjak")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_6724e")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_einsw")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_rts5j")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_dqf2i")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_my5xc")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_u14kk")
}, {
"duration": 0.07,
"texture": SubResource("AtlasTexture_imvkv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 18
font_color = Color(0.8, 0.8, 0.8, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3"]
font_color = Color(0, 1, 1, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="WaveUI" type="CanvasLayer"]
layer = 50
script = ExtResource("1_8k4qh")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="WaveInfo" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 400.0
offset_bottom = -20.0
grow_vertical = 0

[node name="coins" type="Node2D" parent="UI/WaveInfo"]
position = Vector2(-20, -960)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="UI/WaveInfo/coins"]
position = Vector2(75, 57)
sprite_frames = SubResource("SpriteFrames_q0d4d")

[node name="CoinLabel" type="Label" parent="UI/WaveInfo/coins"]
offset_left = 102.0
offset_top = 25.0
offset_right = 142.0
offset_bottom = 89.0
theme_override_colors/font_color = Color(1, 0.843137, 0.00784314, 1)
theme_override_fonts/font = ExtResource("2_5rt17")
theme_override_font_sizes/font_size = 50
text = "0"

[node name="WaveLabel" type="Label" parent="UI/WaveInfo"]
layout_mode = 2
text = "Manche I"
label_settings = SubResource("LabelSettings_1")

[node name="ZombiesLabel" type="Label" parent="UI/WaveInfo"]
layout_mode = 2
text = "Zombies: 0/0"
label_settings = SubResource("LabelSettings_2")

[node name="RecordLabel" type="Label" parent="UI/WaveInfo"]
layout_mode = 2
text = "Record: 0 manches"
label_settings = SubResource("LabelSettings_3")

[node name="PauseTimer" type="Label" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Pause: 20s
Santé régénérée!"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
vertical_alignment = 1
